Code quality improved